[package]
name = "ozymandias"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
flume = "0.11"
rtrb = "0.2"
event-listener = "3"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
aes-gcm-siv = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
zstd = { version = "0.12", features = ["zstdmt"] }
time = { version = "0.3", features = ["serde"] }
rand = "0.8"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
threadpool = "1"
fs-err = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
humansize = "2"
file-guard = "0.1"
crossbeam-queue = "0.3"

# work around file-guard compilation error
winapi = { version = "0.3", features = ["std"] }

aws-config = "0.56"
aws-sdk-s3 = "0.31"

[dev-dependencies]
rstest = "0.18"
tempfile = "3"
