[package]
name = "ozymandias"
version = "0.1.0"
edition = "2021"
description = "Alpha-quality backup program."
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/ozymandias"
repository = "https://github.com/caelunshun/ozymandias"
homepage = "https://github.com/caelunshun/ozymandias"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
blake3 = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
diatomic-waker = "0.1"
file-guard = "0.1"
flume = "0.11"
fs-err = "2"
hex = "0.4"
humansize = "2"
indexmap = { version = "2", features = ["serde"] }
pin-project = "1"
pollster = "0.3"
rand = "0.8"
rayon = "1"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = { version = "1", features = ["v7", "serde"] }
# work around file-guard compilation error
winapi = { version = "0.3", features = ["std"] }
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
rstest = "0.18"
tempfile = "3"

[profile.dev.package.'*']
opt-level = 1
