[package]
name = "ozymandias"
version = "0.3.3"
edition = "2021"
description = "Alpha-quality backup program."
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/ozymandias"
repository = "https://github.com/caelunshun/ozymandias"
homepage = "https://github.com/caelunshun/ozymandias"

[dependencies]
aead = { version = "0.5", features = ["stream"] }
aes-gcm-siv = "0.11"
anyhow = "1"
argon2 = "0.5"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
blake3 = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
diatomic-waker = "0.2"
flume = "0.11"
fs-err = "3"
hex = "0.4"
humansize = "2"
indicatif = "0.17"
pollster = "0.4"
rand = "0.8"
rayon = "1"
ron = "0.8"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
zstd = { version = "0.13", features = ["zstdmt"] }
jemallocator = "0.5"

[dev-dependencies]
rstest = "0.23"
tempfile = "3"

[profile.dev.package.'*']
opt-level = 3
